--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 gitlab-update:
   stage: deploy
   script:
-    - curl 'https://raw.githubusercontent.com/fernvenue/chn-cidr-list/master/updater.sh' -o ./gitlab-updater.sh
+    - curl 'https://cdn.jsdelivr.net/gh/fernvenue/chn-cidr-list@master/updater.sh' -o ./gitlab-updater.sh
     - sed -i 's|GITHUB|GITLAB|g' ./gitlab-updater.sh
     - sed -i 's|github|gitlab|g' ./gitlab-updater.sh
     - chmod +x ./gitlab-updater.sh
@@ -10,6 +10,6 @@ gitlab-update:
 github-update:
   stage: deploy
   script:
-    - curl 'https://raw.githubusercontent.com/fernvenue/chn-cidr-list/master/updater.sh' -o ./github-updater.sh
+    - curl 'https://cdn.jsdelivr.net/gh/fernvenue/chn-cidr-list@master/updater.sh' -o ./github-updater.sh
     - chmod +x ./github-updater.sh
     - ./github-updater.sh
