--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1811,6 +1811,7 @@ IP-CIDR6,2407:8b80::/27
 IP-CIDR6,2407:8f40::/27
 IP-CIDR6,2407:9080::/27
 IP-CIDR6,2407:9180::/27
+IP-CIDR6,2407:94c0::/27
 IP-CIDR6,2407:9680::/27
 IP-CIDR6,2407:9980::/27
 IP-CIDR6,2407:9f00::/27
