Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1814,8 +1814,11 @@ IP-CIDR6,2407:9180::/27
 IP-CIDR6,2407:94c0::/27
 IP-CIDR6,2407:9680::/27
 IP-CIDR6,2407:9980::/27
+IP-CIDR6,2407:9b40::/27
+IP-CIDR6,2407:9bc0::/27
 IP-CIDR6,2407:9f00::/27
 IP-CIDR6,2407:9f80::/27
+IP-CIDR6,2407:a040::/27
 IP-CIDR6,2407:a480::/27
 IP-CIDR6,2407:a880::/27
 IP-CIDR6,2407:ad80::/27
