--- a/ipv6.conf
+++ b/ipv6.conf
@@ -825,7 +825,6 @@ IP-CIDR6,2403:2ac0::/27
 IP-CIDR6,2403:2b40::/27
 IP-CIDR6,2403:2bc0::/27
 IP-CIDR6,2403:2cc0::/27
-IP-CIDR6,2403:2d80::/27
 IP-CIDR6,2403:2f40::/27
 IP-CIDR6,2403:2fc0::/27
 IP-CIDR6,2403:3040::/27
@@ -1819,6 +1818,8 @@ IP-CIDR6,2407:9f00::/27
 IP-CIDR6,2407:9f80::/27
 IP-CIDR6,2407:a040::/27
 IP-CIDR6,2407:a480::/27
+IP-CIDR6,2407:a640::/27
+IP-CIDR6,2407:a7c0::/27
 IP-CIDR6,2407:a880::/27
 IP-CIDR6,2407:ad80::/27
 IP-CIDR6,2407:ae80::/27
