Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -97,6 +97,7 @@ IP-CIDR6,2001:df6:9e80::/26
 IP-CIDR6,2001:df6:9f80::/26
 IP-CIDR6,2001:df6:df00::/26
 IP-CIDR6,2001:df6:f400::/26
+IP-CIDR6,2001:df7:1480::/26
 IP-CIDR6,2001:df7:5900::/26
 IP-CIDR6,2001:df7:6600::/26
 IP-CIDR6,2001:df7:ab00::/26
@@ -1651,7 +1652,6 @@ IP-CIDR6,2406:9280::/27
 IP-CIDR6,2406:9380::/27
 IP-CIDR6,2406:9480::/27
 IP-CIDR6,2406:94c0::/27
-IP-CIDR6,2406:96c0::/27
 IP-CIDR6,2406:9780::/27
 IP-CIDR6,2406:9d80::/27
 IP-CIDR6,2406:9e40::/27
@@ -1821,6 +1821,7 @@ IP-CIDR6,2407:a480::/27
 IP-CIDR6,2407:a640::/27
 IP-CIDR6,2407:a7c0::/27
 IP-CIDR6,2407:a880::/27
+IP-CIDR6,2407:a940::/27
 IP-CIDR6,2407:ad80::/27
 IP-CIDR6,2407:ae80::/27
 IP-CIDR6,2407:af80::/27
