Update CIDR list

--- a/ipv6.yaml
+++ b/ipv6.yaml
@@ -99,6 +99,7 @@ payload:
   - '2001:df6:df00::/26'
   - '2001:df6:f400::/26'
   - '2001:df7:1480::/26'
+  - '2001:df7:2b80::/26'
   - '2001:df7:5900::/26'
   - '2001:df7:6600::/26'
   - '2001:df7:ab00::/26'
@@ -1247,7 +1248,6 @@ payload:
   - '2405:c80::/27'
   - '2405:d80::/27'
   - '2405:e80::/27'
-  - '2405:f40::/27'
   - '2405:f80::/27'
   - '2405:1080::/27'
   - '2405:1180::/27'
@@ -1841,6 +1841,7 @@ payload:
   - '2407:bc00::/27'
   - '2407:bc80::/27'
   - '2407:bd80::/27'
+  - '2407:bdc0::/27'
   - '2407:be80::/27'
   - '2407:bf80::/27'
   - '2407:c080::/27'
