--- a/ipv6.conf
+++ b/ipv6.conf
@@ -98,6 +98,7 @@ IP-CIDR6,2001:df6:9f80::/26
 IP-CIDR6,2001:df6:df00::/26
 IP-CIDR6,2001:df6:f400::/26
 IP-CIDR6,2001:df7:1480::/26
+IP-CIDR6,2001:df7:2b80::/26
 IP-CIDR6,2001:df7:5900::/26
 IP-CIDR6,2001:df7:6600::/26
 IP-CIDR6,2001:df7:ab00::/26
@@ -1246,7 +1247,6 @@ IP-CIDR6,2405:b80::/27
 IP-CIDR6,2405:c80::/27
 IP-CIDR6,2405:d80::/27
 IP-CIDR6,2405:e80::/27
-IP-CIDR6,2405:f40::/27
 IP-CIDR6,2405:f80::/27
 IP-CIDR6,2405:1080::/27
 IP-CIDR6,2405:1180::/27
@@ -1840,6 +1840,7 @@ IP-CIDR6,2407:bb80::/27
 IP-CIDR6,2407:bc00::/27
 IP-CIDR6,2407:bc80::/27
 IP-CIDR6,2407:bd80::/27
+IP-CIDR6,2407:bdc0::/27
 IP-CIDR6,2407:be80::/27
 IP-CIDR6,2407:bf80::/27
 IP-CIDR6,2407:c080::/27
