--- a/ipv4.conf
+++ b/ipv4.conf
@@ -4153,6 +4153,7 @@ IP-CIDR,103.170.210.0/23
 IP-CIDR,103.170.212.0/23
 IP-CIDR,103.171.32.0/23
 IP-CIDR,103.171.166.0/23
+IP-CIDR,103.171.214.0/23
 IP-CIDR,103.192.0.0/22
 IP-CIDR,103.192.4.0/22
 IP-CIDR,103.192.8.0/22
