Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1862,6 +1862,7 @@ IP-CIDR6,2407:d480::/27
 IP-CIDR6,2407:d580::/27
 IP-CIDR6,2407:d680::/27
 IP-CIDR6,2407:d780::/27
+IP-CIDR6,2407:d7c0::/27
 IP-CIDR6,2407:d880::/27
 IP-CIDR6,2407:d980::/27
 IP-CIDR6,2407:da80::/27
