--- a/ipv6.yaml
+++ b/ipv6.yaml
@@ -1733,7 +1733,6 @@ payload:
   - '2406:df80::/27'
   - '2406:e080::/27'
   - '2406:e180::/27'
-  - '2406:e280::/27'
   - '2406:e2c0::/27'
   - '2406:e380::/27'
   - '2406:e3c0::/27'
@@ -1865,13 +1864,16 @@ payload:
   - '2407:d780::/27'
   - '2407:d7c0::/27'
   - '2407:d880::/27'
+  - '2407:d8c0::/27'
   - '2407:d980::/27'
+  - '2407:d9c0::/27'
   - '2407:da80::/27'
   - '2407:db80::/27'
   - '2407:dc80::/27'
   - '2407:dd80::/27'
   - '2407:de80::/27'
   - '2407:df80::/27'
+  - '2407:dfc0::/27'
   - '2407:e080::/27'
   - '2407:e180::/27'
   - '2407:e280::/27'
