Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -389,6 +389,7 @@ IP-CIDR,2401:8540::/27
 IP-CIDR,2401:8600::/27
 IP-CIDR,2401:8680::/27
 IP-CIDR,2401:8840::/27
+IP-CIDR,2401:89c0::/48
 IP-CIDR,2401:8d00::/27
 IP-CIDR,2401:8e40::/27
 IP-CIDR,2401:8f40::/27
@@ -2307,7 +2308,7 @@ IP-CIDR,2a10:2f00:12a::/48
 IP-CIDR,2a10:2f00:15a::/48
 IP-CIDR,2a10:2f00:15c::/48
 IP-CIDR,2a10:cc42:120::/44
-IP-CIDR,2a10:cc44:100::/44
+IP-CIDR,2a10:cc44:109::/48
 IP-CIDR,2c0f:f7a8:8011::/48
 IP-CIDR,2c0f:f7a8:8050::/48
 IP-CIDR,2c0f:f7a8:805f::/48
