Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -476,7 +476,6 @@ IP-CIDR,2401:f300::/27
 IP-CIDR,2401:f7c0::/27
 IP-CIDR,2401:fa00:40::/43
 IP-CIDR,2401:fa80::/27
-IP-CIDR,2401:fac0::/27
 IP-CIDR,2401:fb80::/27
 IP-CIDR,2401:fc80::/27
 IP-CIDR,2401:fe80::/27
@@ -1069,6 +1068,8 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
+IP-CIDR,2404:2280:12e::/48
+IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
 IP-CIDR,2404:30c0::/27
 IP-CIDR,2404:3140::/27
