Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1089,6 +1089,7 @@ IP-CIDR,2404:3940::/27
 IP-CIDR,2404:3b00::/27
 IP-CIDR,2404:3bc0::/27
 IP-CIDR,2404:3c40::/27
+IP-CIDR,2404:3d80:107::/48
 IP-CIDR,2404:3f40::/27
 IP-CIDR,2404:4080::/27
 IP-CIDR,2404:41c0::/27
@@ -2152,7 +2153,7 @@ IP-CIDR,240d:8000::/27
 IP-CIDR,240d:c000:1000::/36
 IP-CIDR,240d:c000:2000::/35
 IP-CIDR,240d:c010::/47
-IP-CIDR,240d:c010:18::/47
+IP-CIDR,240d:c010:19::/48
 IP-CIDR,240d:c010:1b::/48
 IP-CIDR,240d:c010:20::/44
 IP-CIDR,240d:c010:30::/48
@@ -2167,7 +2168,6 @@ IP-CIDR,2602:fd92:630::/46
 IP-CIDR,2602:fd92:800::/48
 IP-CIDR,2602:fed2:731d::/48
 IP-CIDR,2602:feda:182::/47
-IP-CIDR,2602:feda:1bf::/48
 IP-CIDR,2602:feda:1d1::/48
 IP-CIDR,2602:feda:1d2::/47
 IP-CIDR,2602:feda:2d0::/47
@@ -2177,8 +2177,6 @@ IP-CIDR,2602:feda:af3::/48
 IP-CIDR,2602:feda:bf0::/44
 IP-CIDR,2602:feda:d30::/48
 IP-CIDR,2602:feda:d80::/48
-IP-CIDR,2602:ff7a:f00::/48
-IP-CIDR,2602:ff7a:fee::/48
 IP-CIDR,2605:9d80:8001::/48
 IP-CIDR,2605:9d80:8011::/48
 IP-CIDR,2605:9d80:8021::/48
@@ -2238,7 +2236,6 @@ IP-CIDR,2a06:9f45:1111::/48
 IP-CIDR,2a07:1c44:9600::/40
 IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
-IP-CIDR,2a09:b280:ff81::/48
 IP-CIDR,2a0a:2842:15::/48
 IP-CIDR,2a0a:2842:16::/48
 IP-CIDR,2a0a:2842:100::/48
@@ -2300,6 +2297,7 @@ IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0e:b107:16f0::/44
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
+IP-CIDR,2a0f:9400:7400::/40
 IP-CIDR,2a0f:9400:7565::/48
 IP-CIDR,2a0f:9400:770a::/48
 IP-CIDR,2a10:1cc7:10::/48
@@ -2307,7 +2305,7 @@ IP-CIDR,2a10:2f00:12a::/48
 IP-CIDR,2a10:2f00:15a::/48
 IP-CIDR,2a10:2f00:15c::/48
 IP-CIDR,2a10:cc42:120::/44
-IP-CIDR,2a10:cc44:109::/48
+IP-CIDR,2a10:cc44:100::/44
 IP-CIDR,2c0f:f7a8:8011::/48
 IP-CIDR,2c0f:f7a8:8050::/48
 IP-CIDR,2c0f:f7a8:805f::/48
