Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -391,7 +391,6 @@ IP-CIDR,2401:8680::/27
 IP-CIDR,2401:8840::/27
 IP-CIDR,2401:89c0::/48
 IP-CIDR,2401:8d00::/27
-IP-CIDR,2401:8e40::/27
 IP-CIDR,2401:8f40::/27
 IP-CIDR,2401:8fc0::/27
 IP-CIDR,2401:9340::/27
@@ -765,7 +764,6 @@ IP-CIDR,2403:24c0::/27
 IP-CIDR,2403:2580::/27
 IP-CIDR,2403:25c0::/27
 IP-CIDR,2403:2680::/27
-IP-CIDR,2403:26c0::/27
 IP-CIDR,2403:2740::/27
 IP-CIDR,2403:2780::/27
 IP-CIDR,2403:28c0::/27
@@ -1068,6 +1066,7 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
+IP-CIDR,2404:2280:12e::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
 IP-CIDR,2404:30c0::/27
@@ -1474,7 +1473,6 @@ IP-CIDR,2406:1e80::/27
 IP-CIDR,2406:1f80::/27
 IP-CIDR,2406:2000:a0::/48
 IP-CIDR,2406:2080::/27
-IP-CIDR,2406:2580::/27
 IP-CIDR,2406:2640::/27
 IP-CIDR,2406:2700::/27
 IP-CIDR,2406:2780::/27
@@ -2164,7 +2162,6 @@ IP-CIDR,240e:2000::/27
 IP-CIDR,240f:4000::/27
 IP-CIDR,240f:8000::/27
 IP-CIDR,240f:c000::/27
-IP-CIDR,2602:fd92:630::/46
 IP-CIDR,2602:fd92:800::/48
 IP-CIDR,2602:fed2:731d::/48
 IP-CIDR,2602:feda:182::/47
@@ -2291,13 +2288,10 @@ IP-CIDR,2a0e:b107:1477::/48
 IP-CIDR,2a0e:b107:147a::/48
 IP-CIDR,2a0e:b107:147c::/48
 IP-CIDR,2a0e:b107:14a0::/44
-IP-CIDR,2a0e:b107:1571::/48
-IP-CIDR,2a0e:b107:1572::/47
 IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0e:b107:16f0::/44
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
-IP-CIDR,2a0f:9400:7400::/40
 IP-CIDR,2a0f:9400:7565::/48
 IP-CIDR,2a0f:9400:770a::/48
 IP-CIDR,2a10:1cc7:10::/48
