Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1066,7 +1066,6 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
-IP-CIDR,2404:2280:12e::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
 IP-CIDR,2404:30c0::/27
@@ -2163,6 +2162,7 @@ IP-CIDR,240f:4000::/27
 IP-CIDR,240f:8000::/27
 IP-CIDR,240f:c000::/27
 IP-CIDR,2602:fd92:800::/48
+IP-CIDR,2602:fd92:b00::/48
 IP-CIDR,2602:fed2:731d::/48
 IP-CIDR,2602:feda:182::/47
 IP-CIDR,2602:feda:1d1::/48
@@ -2292,6 +2292,7 @@ IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0e:b107:16f0::/44
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
+IP-CIDR,2a0f:9400:7400::/40
 IP-CIDR,2a0f:9400:7565::/48
 IP-CIDR,2a0f:9400:770a::/48
 IP-CIDR,2a10:1cc7:10::/48
