Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2165,6 +2165,7 @@ IP-CIDR,2602:fd92:800::/48
 IP-CIDR,2602:fd92:b00::/48
 IP-CIDR,2602:fed2:731d::/48
 IP-CIDR,2602:feda:182::/47
+IP-CIDR,2602:feda:1bf::/48
 IP-CIDR,2602:feda:1d1::/48
 IP-CIDR,2602:feda:1d2::/47
 IP-CIDR,2602:feda:2d0::/47
@@ -2233,6 +2234,7 @@ IP-CIDR,2a06:9f45:1111::/48
 IP-CIDR,2a07:1c44:9600::/40
 IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
+IP-CIDR,2a09:b280:ff81::/48
 IP-CIDR,2a0a:2842:15::/48
 IP-CIDR,2a0a:2842:16::/48
 IP-CIDR,2a0a:2842:100::/48
@@ -2272,6 +2274,7 @@ IP-CIDR,2a0e:aa07:f0b0::/48
 IP-CIDR,2a0e:aa07:f0d0::/47
 IP-CIDR,2a0e:b107:16::/48
 IP-CIDR,2a0e:b107:1d0::/44
+IP-CIDR,2a0e:b107:1f1::/48
 IP-CIDR,2a0e:b107:580::/44
 IP-CIDR,2a0e:b107:6d0::/44
 IP-CIDR,2a0e:b107:bd0::/48
