--- a/ipv4.conf
+++ b/ipv4.conf
@@ -630,6 +630,7 @@ IP-CIDR,45.115.248.0/22
 IP-CIDR,45.116.16.0/22
 IP-CIDR,45.116.24.0/22
 IP-CIDR,45.116.32.0/21
+IP-CIDR,45.116.40.0/23
 IP-CIDR,45.116.52.0/22
 IP-CIDR,45.116.96.0/21
 IP-CIDR,45.116.140.0/22
