Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1184,6 +1184,11 @@ IP-CIDR,2404:ea80:600:623::/64
 IP-CIDR,2404:ea80:600:734::/64
 IP-CIDR,2404:ea80:600:734a::/63
 IP-CIDR,2404:ea80:600:734c::/64
+IP-CIDR,2404:ea80:700:100::/63
+IP-CIDR,2404:ea80:700:113::/64
+IP-CIDR,2404:ea80:700:695::/64
+IP-CIDR,2404:ea80:700:696::/63
+IP-CIDR,2404:ea80:700:696a::/64
 IP-CIDR,2404:eb40::/27
 IP-CIDR,2404:eb80::/27
 IP-CIDR,2404:ec40::/27
@@ -2162,7 +2167,6 @@ IP-CIDR,240f:4000::/27
 IP-CIDR,240f:8000::/27
 IP-CIDR,240f:c000::/27
 IP-CIDR,2602:fd92:800::/48
-IP-CIDR,2602:fd92:b00::/48
 IP-CIDR,2602:fed2:731d::/48
 IP-CIDR,2602:feda:182::/47
 IP-CIDR,2602:feda:1bf::/48
@@ -2190,7 +2194,6 @@ IP-CIDR,2605:9d80:9052::/48
 IP-CIDR,2605:9d80:9061::/48
 IP-CIDR,2605:9d80:9071::/48
 IP-CIDR,2605:9d80:9092::/48
-IP-CIDR,2606:5e40:2::/48
 IP-CIDR,2804:1e48::/32
 IP-CIDR,2a04:6f01:8f00::/48
 IP-CIDR,2a04:f580:8000::/48
@@ -2256,7 +2259,7 @@ IP-CIDR,2a0d:2583::/32
 IP-CIDR,2a0d:2584::/32
 IP-CIDR,2a0d:2682::/32
 IP-CIDR,2a0e:8f02:2180::/48
-IP-CIDR,2a0e:8f02:2184::/48
+IP-CIDR,2a0e:8f02:2184::/47
 IP-CIDR,2a0e:8f02:2186::/48
 IP-CIDR,2a0e:97c0:330::/48
 IP-CIDR,2a0e:97c0:550::/44
