Update CIDR list

--- a/ipv4.conf
+++ b/ipv4.conf
@@ -630,6 +630,7 @@ IP-CIDR,45.115.248.0/22
 IP-CIDR,45.116.16.0/22
 IP-CIDR,45.116.24.0/22
 IP-CIDR,45.116.32.0/21
+IP-CIDR,45.116.40.0/23
 IP-CIDR,45.116.52.0/22
 IP-CIDR,45.116.96.0/21
 IP-CIDR,45.116.140.0/22
@@ -3949,6 +3950,7 @@ IP-CIDR,156.240.63.0/24
 IP-CIDR,156.240.72.0/22
 IP-CIDR,156.240.88.0/22
 IP-CIDR,156.240.112.0/21
+IP-CIDR,156.241.8.0/21
 IP-CIDR,156.242.4.0/24
 IP-CIDR,156.242.6.0/24
 IP-CIDR,156.242.8.0/24
