--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1087,7 +1087,7 @@ IP-CIDR,2404:3940::/27
 IP-CIDR,2404:3b00::/27
 IP-CIDR,2404:3bc0::/27
 IP-CIDR,2404:3c40::/27
-IP-CIDR,2404:3d80:107::/48
+IP-CIDR,2404:3d80:100::/44
 IP-CIDR,2404:3f40::/27
 IP-CIDR,2404:4080::/27
 IP-CIDR,2404:41c0::/27
@@ -2165,6 +2165,7 @@ IP-CIDR,240e:2000::/27
 IP-CIDR,240f:4000::/27
 IP-CIDR,240f:8000::/27
 IP-CIDR,240f:c000::/27
+IP-CIDR,2602:fd92:630::/46
 IP-CIDR,2602:fd92:800::/48
 IP-CIDR,2602:fed2:731d::/48
 IP-CIDR,2602:feda:182::/47
@@ -2290,6 +2291,8 @@ IP-CIDR,2a0e:b107:1477::/48
 IP-CIDR,2a0e:b107:147a::/48
 IP-CIDR,2a0e:b107:147c::/48
 IP-CIDR,2a0e:b107:14a0::/44
+IP-CIDR,2a0e:b107:1571::/48
+IP-CIDR,2a0e:b107:1572::/47
 IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
