--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2296,6 +2296,7 @@ IP-CIDR,2a0e:b107:1572::/47
 IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
+IP-CIDR,2a0f:9400:7400::/40
 IP-CIDR,2a0f:9400:7565::/48
 IP-CIDR,2a0f:9400:770a::/48
 IP-CIDR,2a10:1cc7:10::/48
