--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1066,6 +1066,7 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
+IP-CIDR,2404:2280:147::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
 IP-CIDR,2404:30c0::/27
@@ -1087,7 +1088,6 @@ IP-CIDR,2404:3940::/27
 IP-CIDR,2404:3b00::/27
 IP-CIDR,2404:3bc0::/27
 IP-CIDR,2404:3c40::/27
-IP-CIDR,2404:3d80:100::/44
 IP-CIDR,2404:3f40::/27
 IP-CIDR,2404:4080::/27
 IP-CIDR,2404:41c0::/27
@@ -1184,8 +1184,8 @@ IP-CIDR,2404:ea80:600:623::/64
 IP-CIDR,2404:ea80:600:734::/64
 IP-CIDR,2404:ea80:600:734a::/63
 IP-CIDR,2404:ea80:600:734c::/64
-IP-CIDR,2404:ea80:700:100::/63
-IP-CIDR,2404:ea80:700:113::/64
+IP-CIDR,2404:ea80:700:101::/64
+IP-CIDR,2404:ea80:700:112::/63
 IP-CIDR,2404:ea80:700:695::/64
 IP-CIDR,2404:ea80:700:696::/63
 IP-CIDR,2404:ea80:700:696a::/64
@@ -2228,7 +2228,6 @@ IP-CIDR,2a04:f580:9270::/48
 IP-CIDR,2a04:f580:9280::/48
 IP-CIDR,2a04:f580:9290::/48
 IP-CIDR,2a05:1082:e000::/40
-IP-CIDR,2a05:1083:1100::/47
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
