Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -23,6 +23,7 @@ IP-CIDR,2400:17c0::/27
 IP-CIDR,2400:1840::/27
 IP-CIDR,2400:18c0::/27
 IP-CIDR,2400:1940::/27
+IP-CIDR,2400:19a0::/27
 IP-CIDR,2400:19c0::/27
 IP-CIDR,2400:1a40::/27
 IP-CIDR,2400:1ac0::/27
@@ -2165,7 +2166,6 @@ IP-CIDR,240e:2000::/27
 IP-CIDR,240f:4000::/27
 IP-CIDR,240f:8000::/27
 IP-CIDR,240f:c000::/27
-IP-CIDR,2602:fd92:630::/46
 IP-CIDR,2602:fd92:800::/48
 IP-CIDR,2602:fed2:731d::/48
 IP-CIDR,2602:feda:182::/47
@@ -2233,7 +2233,6 @@ IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
 IP-CIDR,2a06:9f45:1111::/48
-IP-CIDR,2a07:1c44:9600::/40
 IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
 IP-CIDR,2a09:b280:ff81::/48
@@ -2290,8 +2289,6 @@ IP-CIDR,2a0e:b107:1477::/48
 IP-CIDR,2a0e:b107:147a::/48
 IP-CIDR,2a0e:b107:147c::/48
 IP-CIDR,2a0e:b107:14a0::/44
-IP-CIDR,2a0e:b107:1571::/48
-IP-CIDR,2a0e:b107:1572::/47
 IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
