--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2233,6 +2233,7 @@ IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
 IP-CIDR,2a06:9f45:1111::/48
+IP-CIDR,2a07:1c44:9600::/40
 IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
 IP-CIDR,2a09:b280:ff81::/48
@@ -2292,7 +2293,6 @@ IP-CIDR,2a0e:b107:14a0::/44
 IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
-IP-CIDR,2a0f:9400:7400::/40
 IP-CIDR,2a0f:9400:7565::/48
 IP-CIDR,2a0f:9400:770a::/48
 IP-CIDR,2a10:2f00:12a::/48
