--- a/ipv4.conf
+++ b/ipv4.conf
@@ -268,6 +268,7 @@ IP-CIDR,43.134.0.0/16
 IP-CIDR,43.135.0.0/17
 IP-CIDR,43.135.128.0/18
 IP-CIDR,43.135.192.0/19
+IP-CIDR,43.136.111.0/24
 IP-CIDR,43.144.0.0/12
 IP-CIDR,43.160.0.0/11
 IP-CIDR,43.224.12.0/22
@@ -280,6 +281,8 @@ IP-CIDR,43.224.72.0/22
 IP-CIDR,43.224.80.0/22
 IP-CIDR,43.224.100.0/22
 IP-CIDR,43.224.144.0/22
+IP-CIDR,43.224.148.0/24
+IP-CIDR,43.224.151.0/24
 IP-CIDR,43.224.160.0/22
 IP-CIDR,43.224.176.0/22
 IP-CIDR,43.224.184.0/22
@@ -3964,6 +3967,7 @@ IP-CIDR,156.247.0.0/24
 IP-CIDR,156.247.29.0/24
 IP-CIDR,156.249.2.0/23
 IP-CIDR,156.252.22.0/24
+IP-CIDR,156.253.32.0/20
 IP-CIDR,156.254.49.0/24
 IP-CIDR,156.254.63.0/24
 IP-CIDR,157.0.0.0/16
@@ -3994,6 +3998,7 @@ IP-CIDR,160.19.208.0/21
 IP-CIDR,160.19.216.0/22
 IP-CIDR,160.20.48.0/22
 IP-CIDR,160.83.110.0/24
+IP-CIDR,160.181.160.0/19
 IP-CIDR,160.202.60.0/22
 IP-CIDR,160.202.148.0/22
 IP-CIDR,160.202.152.0/22
