--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2174,6 +2174,7 @@ IP-CIDR,2602:feda:1d1::/48
 IP-CIDR,2602:feda:1d2::/47
 IP-CIDR,2602:feda:2d0::/47
 IP-CIDR,2602:feda:2f0::/48
+IP-CIDR,2602:feda:3a9::/48
 IP-CIDR,2602:feda:ae6::/47
 IP-CIDR,2602:feda:af3::/48
 IP-CIDR,2602:feda:bf0::/44
@@ -2292,7 +2293,6 @@ IP-CIDR,2a0e:b107:14a0::/44
 IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
-IP-CIDR,2a0f:9400:7400::/40
 IP-CIDR,2a0f:9400:7565::/48
 IP-CIDR,2a0f:9400:770a::/48
 IP-CIDR,2a10:2f00:12a::/48
