Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1181,6 +1181,7 @@ IP-CIDR,2404:e780::/27
 IP-CIDR,2404:e880::/27
 IP-CIDR,2404:e8c0::/27
 IP-CIDR,2404:ea80:400:2116::/64
+IP-CIDR,2404:ea80:600:115::/64
 IP-CIDR,2404:ea80:600:623::/64
 IP-CIDR,2404:ea80:600:734::/64
 IP-CIDR,2404:ea80:600:734a::/63
@@ -2293,6 +2294,7 @@ IP-CIDR,2a0e:b107:14a0::/44
 IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
+IP-CIDR,2a0f:9400:7400::/40
 IP-CIDR,2a0f:9400:7565::/48
 IP-CIDR,2a0f:9400:770a::/48
 IP-CIDR,2a10:2f00:12a::/48
