--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1067,6 +1067,7 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
+IP-CIDR,2404:2280:12e::/48
 IP-CIDR,2404:2280:147::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
@@ -2230,12 +2231,12 @@ IP-CIDR,2a04:f580:9270::/48
 IP-CIDR,2a04:f580:9280::/48
 IP-CIDR,2a04:f580:9290::/48
 IP-CIDR,2a05:1082:e000::/40
+IP-CIDR,2a05:1083:1100::/47
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
 IP-CIDR,2a06:9f45:1111::/48
-IP-CIDR,2a07:1c44:9600::/40
 IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
 IP-CIDR,2a09:b280:ff81::/48
