--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2153,13 +2153,10 @@ IP-CIDR,240c:8000::/27
 IP-CIDR,240c:c000::/20
 IP-CIDR,240d:4000::/21
 IP-CIDR,240d:8000::/27
-IP-CIDR,240d:c000:1000::/36
-IP-CIDR,240d:c000:2000::/35
+IP-CIDR,240d:c000:2000::/36
 IP-CIDR,240d:c010::/47
 IP-CIDR,240d:c010:19::/48
 IP-CIDR,240d:c010:1b::/48
-IP-CIDR,240d:c010:20::/44
-IP-CIDR,240d:c010:30::/48
 IP-CIDR,240d:c040::/44
 IP-CIDR,240e::/20
 IP-CIDR,240e:1000::/27
@@ -2170,6 +2167,7 @@ IP-CIDR,240f:c000::/27
 IP-CIDR,2602:fd92:800::/48
 IP-CIDR,2602:fed2:731d::/48
 IP-CIDR,2602:feda:182::/48
+IP-CIDR,2602:feda:185::/48
 IP-CIDR,2602:feda:1bf::/48
 IP-CIDR,2602:feda:1d1::/48
 IP-CIDR,2602:feda:1d2::/47
