--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1067,6 +1067,7 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
+IP-CIDR,2404:2280:12e::/48
 IP-CIDR,2404:2280:147::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
@@ -2166,7 +2167,6 @@ IP-CIDR,240f:8000::/27
 IP-CIDR,240f:c000::/27
 IP-CIDR,2602:fd92:800::/48
 IP-CIDR,2602:fed2:731d::/48
-IP-CIDR,2602:feda:182::/48
 IP-CIDR,2602:feda:185::/48
 IP-CIDR,2602:feda:1bf::/48
 IP-CIDR,2602:feda:1d1::/48
@@ -2231,7 +2231,6 @@ IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
-IP-CIDR,2a06:9f45:1111::/48
 IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
 IP-CIDR,2a09:b280:ff81::/48
@@ -2287,7 +2286,6 @@ IP-CIDR,2a0e:b107:14a0::/44
 IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
-IP-CIDR,2a0f:9400:7400::/40
 IP-CIDR,2a0f:9400:770a::/48
 IP-CIDR,2a10:2f00:12a::/48
 IP-CIDR,2a10:2f00:15a::/48
