Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -36,7 +36,7 @@ IP-CIDR,2400:1ec0::/27
 IP-CIDR,2400:1f40::/27
 IP-CIDR,2400:1fc0::/27
 IP-CIDR,2400:3040::/27
-IP-CIDR,2400:3140::/27
+IP-CIDR,2400:3140::/26
 IP-CIDR,2400:31c0::/27
 IP-CIDR,2400:3200::/27
 IP-CIDR,2400:3280::/27
@@ -1067,7 +1067,6 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
-IP-CIDR,2404:2280:12e::/48
 IP-CIDR,2404:2280:147::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
@@ -2173,6 +2172,7 @@ IP-CIDR,2602:feda:1d1::/48
 IP-CIDR,2602:feda:1d2::/47
 IP-CIDR,2602:feda:2d0::/47
 IP-CIDR,2602:feda:2f0::/48
+IP-CIDR,2602:feda:3a9::/48
 IP-CIDR,2602:feda:ae6::/47
 IP-CIDR,2602:feda:af3::/48
 IP-CIDR,2602:feda:bf0::/44
