--- a/ipv6.yaml
+++ b/ipv6.yaml
@@ -37,7 +37,7 @@ payload:
   - '2400:1f40::/27'
   - '2400:1fc0::/27'
   - '2400:3040::/27'
-  - '2400:3140::/27'
+  - '2400:3140::/26'
   - '2400:31c0::/27'
   - '2400:3200::/27'
   - '2400:3280::/27'
@@ -1068,7 +1068,6 @@ payload:
   - '2404:2280:10d::/48'
   - '2404:2280:113::/48'
   - '2404:2280:124::/47'
-  - '2404:2280:12e::/48'
   - '2404:2280:147::/48'
   - '2404:2280:19d::/48'
   - '2404:2280:1be::/48'
@@ -2174,6 +2173,7 @@ payload:
   - '2602:feda:1d2::/47'
   - '2602:feda:2d0::/47'
   - '2602:feda:2f0::/48'
+  - '2602:feda:3a9::/48'
   - '2602:feda:ae6::/47'
   - '2602:feda:af3::/48'
   - '2602:feda:bf0::/44'
