--- a/ipv6.yaml
+++ b/ipv6.yaml
@@ -2167,6 +2167,7 @@ payload:
   - '240f:c000::/27'
   - '2602:fd92:800::/48'
   - '2602:fed2:731d::/48'
+  - '2602:feda:182::/47'
   - '2602:feda:185::/48'
   - '2602:feda:1bf::/48'
   - '2602:feda:1d1::/48'
