--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1191,7 +1191,6 @@ IP-CIDR,2404:ea80:700:112::/63
 IP-CIDR,2404:ea80:700:695::/64
 IP-CIDR,2404:ea80:700:696::/63
 IP-CIDR,2404:ea80:700:696a::/64
-IP-CIDR,2404:eb40::/27
 IP-CIDR,2404:eb80::/27
 IP-CIDR,2404:ec40::/27
 IP-CIDR,2404:ecc0::/27
@@ -2284,6 +2283,7 @@ IP-CIDR,2a0e:b107:147a::/48
 IP-CIDR,2a0e:b107:147c::/48
 IP-CIDR,2a0e:b107:14a0::/44
 IP-CIDR,2a0e:b107:16b0::/44
+IP-CIDR,2a0e:b107:1787::/48
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
 IP-CIDR,2a0f:9400:770a::/48
