Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2152,10 +2152,11 @@ IP-CIDR,240c:8000::/27
 IP-CIDR,240c:c000::/20
 IP-CIDR,240d:4000::/21
 IP-CIDR,240d:8000::/27
-IP-CIDR,240d:c000:2000::/36
+IP-CIDR,240d:c000:2000::/35
 IP-CIDR,240d:c010::/47
 IP-CIDR,240d:c010:19::/48
 IP-CIDR,240d:c010:1b::/48
+IP-CIDR,240d:c010:30::/48
 IP-CIDR,240d:c040::/44
 IP-CIDR,240e::/20
 IP-CIDR,240e:1000::/27
@@ -2284,6 +2285,7 @@ IP-CIDR,2a0e:b107:147c::/48
 IP-CIDR,2a0e:b107:14a0::/44
 IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0e:b107:1787::/48
+IP-CIDR,2a0e:b107:17f0::/45
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
 IP-CIDR,2a0f:9400:770a::/48
