--- a/ipv4.conf
+++ b/ipv4.conf
@@ -628,6 +628,7 @@ IP-CIDR,45.115.248.0/22
 IP-CIDR,45.116.16.0/22
 IP-CIDR,45.116.24.0/22
 IP-CIDR,45.116.32.0/21
+IP-CIDR,45.116.40.0/23
 IP-CIDR,45.116.52.0/22
 IP-CIDR,45.116.96.0/21
 IP-CIDR,45.116.140.0/22
@@ -4048,6 +4049,7 @@ IP-CIDR,163.181.16.0/22
 IP-CIDR,163.181.20.0/24
 IP-CIDR,163.181.22.0/23
 IP-CIDR,163.181.25.0/24
+IP-CIDR,163.181.26.0/24
 IP-CIDR,163.181.28.0/24
 IP-CIDR,163.181.32.0/22
 IP-CIDR,163.181.36.0/24
