--- a/ipv4.conf
+++ b/ipv4.conf
@@ -172,6 +172,7 @@ IP-CIDR,39.64.0.0/11
 IP-CIDR,39.96.0.0/13
 IP-CIDR,39.104.0.0/14
 IP-CIDR,39.108.0.0/16
+IP-CIDR,39.125.80.0/24
 IP-CIDR,39.128.0.0/10
 IP-CIDR,40.72.0.0/15
 IP-CIDR,40.125.128.0/17
