Update CIDR list

--- a/ipv4.conf
+++ b/ipv4.conf
@@ -629,6 +629,7 @@ IP-CIDR,45.115.248.0/22
 IP-CIDR,45.116.16.0/22
 IP-CIDR,45.116.24.0/22
 IP-CIDR,45.116.32.0/21
+IP-CIDR,45.116.40.0/23
 IP-CIDR,45.116.52.0/22
 IP-CIDR,45.116.96.0/21
 IP-CIDR,45.116.140.0/22
@@ -5698,6 +5699,7 @@ IP-CIDR,207.226.136.0/23
 IP-CIDR,207.226.138.0/24
 IP-CIDR,207.226.153.0/24
 IP-CIDR,207.226.154.0/24
+IP-CIDR,208.99.48.0/24
 IP-CIDR,210.2.0.0/19
 IP-CIDR,210.5.0.0/19
 IP-CIDR,210.5.56.0/21
