--- a/ipv6.conf
+++ b/ipv6.conf
@@ -688,6 +688,7 @@ IP-CIDR,2402:e040::/27
 IP-CIDR,2402:e0c0::/27
 IP-CIDR,2402:e140::/27
 IP-CIDR,2402:e2c0::/27
+IP-CIDR,2402:e380:15::/48
 IP-CIDR,2402:e380:100::/40
 IP-CIDR,2402:e380:302::/48
 IP-CIDR,2402:e380:306::/48
@@ -2164,6 +2165,7 @@ IP-CIDR,240e:2000::/27
 IP-CIDR,240f:4000::/27
 IP-CIDR,240f:8000::/27
 IP-CIDR,240f:c000::/27
+IP-CIDR,2602:fc1d::/40
 IP-CIDR,2602:fd92:800::/48
 IP-CIDR,2602:fed2:731d::/48
 IP-CIDR,2602:feda:182::/47
@@ -2177,6 +2179,7 @@ IP-CIDR,2602:feda:ae6::/47
 IP-CIDR,2602:feda:af3::/48
 IP-CIDR,2602:feda:bf0::/44
 IP-CIDR,2602:feda:d80::/48
+IP-CIDR,2605:640f:bcd7::/48
 IP-CIDR,2605:9d80:8001::/48
 IP-CIDR,2605:9d80:8011::/48
 IP-CIDR,2605:9d80:8021::/48
@@ -2247,12 +2250,12 @@ IP-CIDR,2a0c:b641:130::/44
 IP-CIDR,2a0c:b641:24f::/48
 IP-CIDR,2a0c:b641:571::/48
 IP-CIDR,2a0c:b641:572::/48
+IP-CIDR,2a0c:e640:6001::/48
 IP-CIDR,2a0c:e640:6002::/48
 IP-CIDR,2a0c:e640:6660::/47
 IP-CIDR,2a0c:e640:6780::/48
 IP-CIDR,2a0d:2584::/32
 IP-CIDR,2a0d:2682::/32
-IP-CIDR,2a0e:97c0:330::/48
 IP-CIDR,2a0e:97c0:550::/44
 IP-CIDR,2a0e:aa01:1fff::/48
 IP-CIDR,2a0e:aa06::/40
@@ -2285,6 +2288,7 @@ IP-CIDR,2a0e:b107:14a0::/44
 IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0e:b107:1787::/48
 IP-CIDR,2a0e:b107:17f0::/45
+IP-CIDR,2a0e:b107:17f8::/47
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
 IP-CIDR,2a0f:9400:770a::/48
