Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2240,6 +2240,7 @@ IP-CIDR,2a09:b280:ff81::/48
 IP-CIDR,2a0a:2842:15::/48
 IP-CIDR,2a0a:2842:16::/48
 IP-CIDR,2a0a:2842:100::/48
+IP-CIDR,2a0a:2842:481::/48
 IP-CIDR,2a0a:2842:aa00::/46
 IP-CIDR,2a0a:2842:af00::/46
 IP-CIDR,2a0a:2846::/36
