Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1607,7 +1607,6 @@ IP-CIDR,2406:8880::/27
 IP-CIDR,2406:8980::/27
 IP-CIDR,2406:8a80::/27
 IP-CIDR,2406:8b80::/27
-IP-CIDR,2406:8bc0::/27
 IP-CIDR,2406:8c80::/27
 IP-CIDR,2406:8d80::/27
 IP-CIDR,2406:8e80::/27
@@ -2153,6 +2152,7 @@ IP-CIDR,240c:8000::/27
 IP-CIDR,240c:c000::/20
 IP-CIDR,240d:4000::/21
 IP-CIDR,240d:8000::/27
+IP-CIDR,240d:c000:1000::/36
 IP-CIDR,240d:c000:2000::/35
 IP-CIDR,240d:c010::/47
 IP-CIDR,240d:c010:19::/48
@@ -2251,7 +2251,6 @@ IP-CIDR,2a0c:b641:130::/44
 IP-CIDR,2a0c:b641:24f::/48
 IP-CIDR,2a0c:b641:571::/48
 IP-CIDR,2a0c:b641:572::/48
-IP-CIDR,2a0c:e640:6001::/48
 IP-CIDR,2a0c:e640:6002::/48
 IP-CIDR,2a0c:e640:6660::/47
 IP-CIDR,2a0c:e640:6780::/48
