Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -48,7 +48,7 @@ IP-CIDR,2400:34c0::/27
 IP-CIDR,2400:3540::/27
 IP-CIDR,2400:35c0::/27
 IP-CIDR,2400:3600::/27
-IP-CIDR,2400:3640::/27
+IP-CIDR,2400:3640::/26
 IP-CIDR,2400:36c0::/27
 IP-CIDR,2400:38c0::/27
 IP-CIDR,2400:39c0::/27
@@ -2134,13 +2134,6 @@ IP-CIDR,2409:8000::/20
 IP-CIDR,240a:2000::/27
 IP-CIDR,240a:4000::/27
 IP-CIDR,240a:4082:c000::/35
-IP-CIDR,240a:408a:c000::/35
-IP-CIDR,240a:4092:c000::/35
-IP-CIDR,240a:409a:c000::/35
-IP-CIDR,240a:40a2:c000::/35
-IP-CIDR,240a:40aa:c000::/35
-IP-CIDR,240a:414c::/31
-IP-CIDR,240a:41cc::/31
 IP-CIDR,240a:6000::/27
 IP-CIDR,240a:8000::/27
 IP-CIDR,240a:a000::/20
@@ -2178,6 +2171,7 @@ IP-CIDR,2602:feda:2f0::/48
 IP-CIDR,2602:feda:ae6::/47
 IP-CIDR,2602:feda:af3::/48
 IP-CIDR,2602:feda:bf0::/44
+IP-CIDR,2602:feda:d30::/44
 IP-CIDR,2602:feda:d80::/48
 IP-CIDR,2605:640f:bcd7::/48
 IP-CIDR,2605:9d80:8001::/48
@@ -2231,6 +2225,7 @@ IP-CIDR,2a04:f580:9290::/48
 IP-CIDR,2a05:1082:e000::/40
 IP-CIDR,2a05:1083:1100::/47
 IP-CIDR,2a05:1083:1103::/48
+IP-CIDR,2a05:1083:1500::/41
 IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
@@ -2251,11 +2246,11 @@ IP-CIDR,2a0c:b641:130::/44
 IP-CIDR,2a0c:b641:24f::/48
 IP-CIDR,2a0c:b641:571::/48
 IP-CIDR,2a0c:b641:572::/48
+IP-CIDR,2a0c:e640:6001::/48
 IP-CIDR,2a0c:e640:6002::/48
 IP-CIDR,2a0c:e640:6660::/47
 IP-CIDR,2a0c:e640:6780::/48
 IP-CIDR,2a0d:2584::/32
-IP-CIDR,2a0d:2682::/32
 IP-CIDR,2a0e:97c0:550::/44
 IP-CIDR,2a0e:aa01:1fff::/48
 IP-CIDR,2a0e:aa06::/40
