--- a/ipv4.conf
+++ b/ipv4.conf
@@ -2515,6 +2515,7 @@ IP-CIDR,103.175.98.0/23
 IP-CIDR,103.175.114.0/23
 IP-CIDR,103.175.118.0/23
 IP-CIDR,103.176.52.0/23
+IP-CIDR,103.176.222.0/23
 IP-CIDR,103.192.0.0/19
 IP-CIDR,103.192.48.0/21
 IP-CIDR,103.192.56.0/22
