--- a/ipv6.yaml
+++ b/ipv6.yaml
@@ -49,7 +49,7 @@ payload:
   - '2400:3540::/27'
   - '2400:35c0::/27'
   - '2400:3600::/27'
-  - '2400:3640::/27'
+  - '2400:3640::/26'
   - '2400:36c0::/27'
   - '2400:38c0::/27'
   - '2400:39c0::/27'
@@ -2135,13 +2135,6 @@ payload:
   - '240a:2000::/27'
   - '240a:4000::/27'
   - '240a:4082:c000::/35'
-  - '240a:408a:c000::/35'
-  - '240a:4092:c000::/35'
-  - '240a:409a:c000::/35'
-  - '240a:40a2:c000::/35'
-  - '240a:40aa:c000::/35'
-  - '240a:414c::/31'
-  - '240a:41cc::/31'
   - '240a:6000::/27'
   - '240a:8000::/27'
   - '240a:a000::/20'
@@ -2179,6 +2172,7 @@ payload:
   - '2602:feda:ae6::/47'
   - '2602:feda:af3::/48'
   - '2602:feda:bf0::/44'
+  - '2602:feda:d30::/44'
   - '2602:feda:d80::/48'
   - '2605:640f:bcd7::/48'
   - '2605:9d80:8001::/48'
@@ -2232,6 +2226,7 @@ payload:
   - '2a05:1082:e000::/40'
   - '2a05:1083:1100::/47'
   - '2a05:1083:1103::/48'
+  - '2a05:1083:1500::/41'
   - '2a05:1084:7400::/40'
   - '2a05:1084:9000::/36'
   - '2a05:1086::/31'
@@ -2252,11 +2247,11 @@ payload:
   - '2a0c:b641:24f::/48'
   - '2a0c:b641:571::/48'
   - '2a0c:b641:572::/48'
+  - '2a0c:e640:6001::/48'
   - '2a0c:e640:6002::/48'
   - '2a0c:e640:6660::/47'
   - '2a0c:e640:6780::/48'
   - '2a0d:2584::/32'
-  - '2a0d:2682::/32'
   - '2a0e:97c0:550::/44'
   - '2a0e:aa01:1fff::/48'
   - '2a0e:aa06::/40'
