Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2138,6 +2138,7 @@ IP-CIDR,240a:6000::/27
 IP-CIDR,240a:8000::/27
 IP-CIDR,240a:a000::/20
 IP-CIDR,240a:c000::/20
+IP-CIDR,240b:2000::/27
 IP-CIDR,240b:8000::/27
 IP-CIDR,240c::/27
 IP-CIDR,240c:4000::/22
@@ -2165,7 +2166,7 @@ IP-CIDR,2602:feda:182::/47
 IP-CIDR,2602:feda:185::/48
 IP-CIDR,2602:feda:1bf::/48
 IP-CIDR,2602:feda:1d1::/48
-IP-CIDR,2602:feda:1d2::/47
+IP-CIDR,2602:feda:1d2::/48
 IP-CIDR,2602:feda:2d0::/47
 IP-CIDR,2602:feda:2f0::/48
 IP-CIDR,2602:feda:ae6::/47
@@ -2268,7 +2269,7 @@ IP-CIDR,2a0e:b107:1d0::/44
 IP-CIDR,2a0e:b107:580::/44
 IP-CIDR,2a0e:b107:6d0::/44
 IP-CIDR,2a0e:b107:bd0::/48
-IP-CIDR,2a0e:b107:c10::/47
+IP-CIDR,2a0e:b107:c10::/48
 IP-CIDR,2a0e:b107:c30::/44
 IP-CIDR,2a0e:b107:da0::/44
 IP-CIDR,2a0e:b107:dce::/48
