--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1068,6 +1068,7 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
+IP-CIDR,2404:2280:12e::/48
 IP-CIDR,2404:2280:147::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
@@ -2224,7 +2225,6 @@ IP-CIDR,2a04:f580:9270::/48
 IP-CIDR,2a04:f580:9280::/48
 IP-CIDR,2a04:f580:9290::/48
 IP-CIDR,2a05:1082:e000::/40
-IP-CIDR,2a05:1083:1100::/47
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1083:1500::/41
 IP-CIDR,2a05:1084:7400::/40
