Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1068,7 +1068,6 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
-IP-CIDR,2404:2280:12e::/48
 IP-CIDR,2404:2280:147::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
@@ -2253,6 +2252,8 @@ IP-CIDR,2a0c:e640:6660::/47
 IP-CIDR,2a0c:e640:6780::/48
 IP-CIDR,2a0d:2584::/32
 IP-CIDR,2a0e:97c0:550::/44
+IP-CIDR,2a0e:97c0:5e0::/48
+IP-CIDR,2a0e:97c0:5ef::/48
 IP-CIDR,2a0e:aa01:1fff::/48
 IP-CIDR,2a0e:aa06::/40
 IP-CIDR,2a0e:aa06:450::/44
