Update CIDR list

--- a/ipv4.conf
+++ b/ipv4.conf
@@ -2517,6 +2517,7 @@ IP-CIDR,103.176.222.0/23
 IP-CIDR,103.176.244.0/23
 IP-CIDR,103.177.28.0/23
 IP-CIDR,103.177.44.0/23
+IP-CIDR,103.177.70.0/23
 IP-CIDR,103.192.0.0/19
 IP-CIDR,103.192.48.0/21
 IP-CIDR,103.192.56.0/22
