--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2226,9 +2226,11 @@ IP-CIDR,2a04:f580:9290::/48
 IP-CIDR,2a05:1082:e000::/40
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1083:1500::/41
+IP-CIDR,2a05:1083:15c0::/48
 IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
+IP-CIDR,2a06:a001:a051::/48
 IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
 IP-CIDR,2a09:b280:ff81::/48
