--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2151,6 +2151,7 @@ IP-CIDR,240d:c000:2000::/35
 IP-CIDR,240d:c010::/47
 IP-CIDR,240d:c010:19::/48
 IP-CIDR,240d:c010:1b::/48
+IP-CIDR,240d:c010:20::/44
 IP-CIDR,240d:c010:30::/48
 IP-CIDR,240d:c040::/44
 IP-CIDR,240e::/20
@@ -2226,7 +2227,7 @@ IP-CIDR,2a04:f580:9290::/48
 IP-CIDR,2a05:1082:e000::/40
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1083:1500::/41
-IP-CIDR,2a05:1083:15c0::/48
+IP-CIDR,2a05:1083:15c0::/47
 IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
