Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2162,6 +2162,7 @@ IP-CIDR,240f:8000::/27
 IP-CIDR,240f:c000::/27
 IP-CIDR,2602:fc1d::/40
 IP-CIDR,2602:fd92:800::/48
+IP-CIDR,2602:fd92:802::/48
 IP-CIDR,2602:fed2:731d::/48
 IP-CIDR,2602:feda:182::/47
 IP-CIDR,2602:feda:185::/48
