--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2228,11 +2228,10 @@ IP-CIDR,2a04:f580:9290::/48
 IP-CIDR,2a05:1082:e000::/40
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1083:1500::/41
-IP-CIDR,2a05:1083:15c0::/47
+IP-CIDR,2a05:1083:15c1::/48
 IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
-IP-CIDR,2a06:a001:a051::/48
 IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
 IP-CIDR,2a09:b280:ff81::/48
@@ -2282,6 +2281,7 @@ IP-CIDR,2a0e:b107:e70::/44
 IP-CIDR,2a0e:b107:ea2::/48
 IP-CIDR,2a0e:b107:f08::/45
 IP-CIDR,2a0e:b107:11b0::/44
+IP-CIDR,2a0e:b107:12c0::/44
 IP-CIDR,2a0e:b107:1477::/48
 IP-CIDR,2a0e:b107:147a::/48
 IP-CIDR,2a0e:b107:147c::/48
