--- a/ipv6.conf
+++ b/ipv6.conf
@@ -767,6 +767,7 @@ IP-CIDR,2403:24c0::/27
 IP-CIDR,2403:2580::/27
 IP-CIDR,2403:25c0::/27
 IP-CIDR,2403:2680::/27
+IP-CIDR,2403:26c0::/27
 IP-CIDR,2403:2740::/27
 IP-CIDR,2403:2780::/27
 IP-CIDR,2403:28c0::/27
@@ -1345,7 +1346,6 @@ IP-CIDR,2405:7d40::/27
 IP-CIDR,2405:7f40::/27
 IP-CIDR,2405:7fc0::/27
 IP-CIDR,2405:8280::/27
-IP-CIDR,2405:83c0::/27
 IP-CIDR,2405:8480::/27
 IP-CIDR,2405:84c0::/27
 IP-CIDR,2405:8580::/27
@@ -2087,6 +2087,7 @@ IP-CIDR,2408:886e::/31
 IP-CIDR,2408:8872::/32
 IP-CIDR,2408:8878::/31
 IP-CIDR,2408:887e::/32
+IP-CIDR,2408:8907:9000::/44
 IP-CIDR,2408:890c::/31
 IP-CIDR,2408:8912::/31
 IP-CIDR,2408:8914::/30
@@ -2162,7 +2163,7 @@ IP-CIDR,240f:4000::/27
 IP-CIDR,240f:8000::/27
 IP-CIDR,240f:c000::/27
 IP-CIDR,2602:fc1d::/40
-IP-CIDR,2602:fd92:800::/48
+IP-CIDR,2602:fd92:800::/47
 IP-CIDR,2602:fd92:802::/48
 IP-CIDR,2602:fd92:b00::/48
 IP-CIDR,2602:fed2:731d::/48
