--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2229,6 +2229,7 @@ IP-CIDR,2a04:f580:9270::/48
 IP-CIDR,2a04:f580:9280::/48
 IP-CIDR,2a04:f580:9290::/48
 IP-CIDR,2a05:1082:e000::/40
+IP-CIDR,2a05:1083:1100::/47
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1083:1500::/41
 IP-CIDR,2a05:1083:15c0::/47
