--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1189,7 +1189,7 @@ IP-CIDR,2404:ea80:600:623::/64
 IP-CIDR,2404:ea80:600:734::/64
 IP-CIDR,2404:ea80:600:734a::/63
 IP-CIDR,2404:ea80:600:734c::/64
-IP-CIDR,2404:ea80:700:101::/64
+IP-CIDR,2404:ea80:700:104::/64
 IP-CIDR,2404:ea80:700:112::/63
 IP-CIDR,2404:ea80:700:695::/64
 IP-CIDR,2404:ea80:700:696::/63
@@ -2263,6 +2263,7 @@ IP-CIDR,2a0e:97c0:5e0::/48
 IP-CIDR,2a0e:97c0:5ef::/48
 IP-CIDR,2a0e:aa01:1fff::/48
 IP-CIDR,2a0e:aa06::/40
+IP-CIDR,2a0e:aa06:440::/48
 IP-CIDR,2a0e:aa06:450::/44
 IP-CIDR,2a0e:aa06:490::/44
 IP-CIDR,2a0e:aa07:e01b::/48
