--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2259,6 +2259,7 @@ IP-CIDR,2a0c:e640:6780::/48
 IP-CIDR,2a0d:2584::/32
 IP-CIDR,2a0e:97c0:550::/44
 IP-CIDR,2a0e:97c0:5e0::/48
+IP-CIDR,2a0e:97c0:5ee::/47
 IP-CIDR,2a0e:aa01:1fff::/48
 IP-CIDR,2a0e:aa06::/40
 IP-CIDR,2a0e:aa06:440::/48
@@ -2274,12 +2275,14 @@ IP-CIDR,2a0e:aa07:f0d0::/47
 IP-CIDR,2a0e:b107:16::/48
 IP-CIDR,2a0e:b107:1d0::/44
 IP-CIDR,2a0e:b107:580::/44
+IP-CIDR,2a0e:b107:6d0::/44
 IP-CIDR,2a0e:b107:bd0::/48
 IP-CIDR,2a0e:b107:c10::/48
 IP-CIDR,2a0e:b107:c30::/44
 IP-CIDR,2a0e:b107:da0::/44
 IP-CIDR,2a0e:b107:dce::/48
 IP-CIDR,2a0e:b107:e70::/44
+IP-CIDR,2a0e:b107:ea2::/48
 IP-CIDR,2a0e:b107:f08::/45
 IP-CIDR,2a0e:b107:11b0::/44
 IP-CIDR,2a0e:b107:12c0::/44
