Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1822,6 +1822,7 @@ IP-CIDR,2407:cd80::/27
 IP-CIDR,2407:ce80::/27
 IP-CIDR,2407:cf00::/27
 IP-CIDR,2407:cf80::/27
+IP-CIDR,2407:d340:f000::/44
 IP-CIDR,2407:d480::/27
 IP-CIDR,2407:d580::/27
 IP-CIDR,2407:d680::/27
