Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2195,6 +2195,7 @@ IP-CIDR,2605:9d80:9061::/48
 IP-CIDR,2605:9d80:9071::/48
 IP-CIDR,2605:9d80:9092::/48
 IP-CIDR,2804:1e48::/32
+IP-CIDR,2a04:6f01:8f00::/48
 IP-CIDR,2a04:f580:8000::/48
 IP-CIDR,2a04:f580:8010::/47
 IP-CIDR,2a04:f580:8090::/48
@@ -2226,6 +2227,7 @@ IP-CIDR,2a04:f580:9260::/48
 IP-CIDR,2a04:f580:9270::/48
 IP-CIDR,2a04:f580:9280::/48
 IP-CIDR,2a04:f580:9290::/48
+IP-CIDR,2a05:1082:e000::/40
 IP-CIDR,2a05:1083:1100::/47
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1083:1500::/41
@@ -2235,6 +2237,7 @@ IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
 IP-CIDR,2a06:a001:a0a0::/44
+IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
 IP-CIDR,2a09:b280:ff81::/48
 IP-CIDR,2a0a:2842:15::/48
