--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1928,7 +1928,7 @@ IP-CIDR,2408:8214::/31
 IP-CIDR,2408:821a::/31
 IP-CIDR,2408:8220::/31
 IP-CIDR,2408:8226::/32
-IP-CIDR,2408:822a::/32
+IP-CIDR,2408:822a::/31
 IP-CIDR,2408:822e::/31
 IP-CIDR,2408:8230::/29
 IP-CIDR,2408:8238::/31
@@ -2231,6 +2231,7 @@ IP-CIDR,2a05:1082:e000::/40
 IP-CIDR,2a05:1083:1100::/47
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1083:1500::/41
+IP-CIDR,2a05:1083:1580::/42
 IP-CIDR,2a05:1083:15c0::/47
 IP-CIDR,2a05:1083:15cf::/48
 IP-CIDR,2a05:1084:7400::/40
@@ -2255,6 +2256,7 @@ IP-CIDR,2a0c:e640:6780::/48
 IP-CIDR,2a0d:2584::/32
 IP-CIDR,2a0e:97c0:550::/44
 IP-CIDR,2a0e:97c0:5ee::/47
+IP-CIDR,2a0e:97c0:680::/44
 IP-CIDR,2a0e:aa01:1fff::/48
 IP-CIDR,2a0e:aa06::/40
 IP-CIDR,2a0e:aa06:440::/48
@@ -2262,6 +2264,7 @@ IP-CIDR,2a0e:aa06:450::/44
 IP-CIDR,2a0e:aa06:490::/44
 IP-CIDR,2a0e:aa07:e01b::/48
 IP-CIDR,2a0e:aa07:e024::/47
+IP-CIDR,2a0e:aa07:e02e::/48
 IP-CIDR,2a0e:aa07:e200::/44
 IP-CIDR,2a0e:aa07:f000::/48
 IP-CIDR,2a0e:aa07:f004::/47
