--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2270,6 +2270,7 @@ IP-CIDR,2a0e:aa07:f000::/48
 IP-CIDR,2a0e:aa07:f004::/47
 IP-CIDR,2a0e:aa07:f0b0::/48
 IP-CIDR,2a0e:aa07:f0d0::/47
+IP-CIDR,2a0e:b107:16::/48
 IP-CIDR,2a0e:b107:1d0::/44
 IP-CIDR,2a0e:b107:580::/44
 IP-CIDR,2a0e:b107:6d0::/44
@@ -2282,7 +2283,6 @@ IP-CIDR,2a0e:b107:e70::/44
 IP-CIDR,2a0e:b107:ea2::/48
 IP-CIDR,2a0e:b107:f08::/45
 IP-CIDR,2a0e:b107:11b0::/44
-IP-CIDR,2a0e:b107:12c0::/44
 IP-CIDR,2a0e:b107:1477::/48
 IP-CIDR,2a0e:b107:147a::/48
 IP-CIDR,2a0e:b107:147c::/48
@@ -2298,6 +2298,7 @@ IP-CIDR,2a10:2f00:12a::/48
 IP-CIDR,2a10:2f00:15a::/48
 IP-CIDR,2a10:2f00:15c::/48
 IP-CIDR,2a10:cc42:120::/44
+IP-CIDR,2a10:cc44:100::/44
 IP-CIDR,2c0f:f7a8:8011::/48
 IP-CIDR,2c0f:f7a8:8050::/48
 IP-CIDR,2c0f:f7a8:805f::/48
