Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2256,7 +2256,7 @@ IP-CIDR,2a0c:e640:6780::/48
 IP-CIDR,2a0d:2584::/32
 IP-CIDR,2a0e:97c0:550::/44
 IP-CIDR,2a0e:97c0:5ee::/47
-IP-CIDR,2a0e:97c0:680::/44
+IP-CIDR,2a0e:97c0:68e::/47
 IP-CIDR,2a0e:aa01:1fff::/48
 IP-CIDR,2a0e:aa06::/40
 IP-CIDR,2a0e:aa06:440::/48
@@ -2283,6 +2283,7 @@ IP-CIDR,2a0e:b107:e70::/44
 IP-CIDR,2a0e:b107:ea2::/48
 IP-CIDR,2a0e:b107:f08::/45
 IP-CIDR,2a0e:b107:11b0::/44
+IP-CIDR,2a0e:b107:12c0::/44
 IP-CIDR,2a0e:b107:1477::/48
 IP-CIDR,2a0e:b107:147a::/48
 IP-CIDR,2a0e:b107:147c::/48
