--- a/ipv6.conf
+++ b/ipv6.conf
@@ -68,6 +68,7 @@ IP-CIDR,2400:4600::/27
 IP-CIDR,2400:4640::/27
 IP-CIDR,2400:46c0::/27
 IP-CIDR,2400:4740::/27
+IP-CIDR,2400:4920::/27
 IP-CIDR,2400:4bc0::/27
 IP-CIDR,2400:4e00::/27
 IP-CIDR,2400:4e40::/27
@@ -2228,7 +2229,6 @@ IP-CIDR,2a04:f580:9270::/48
 IP-CIDR,2a04:f580:9280::/48
 IP-CIDR,2a04:f580:9290::/48
 IP-CIDR,2a05:1082:e000::/40
-IP-CIDR,2a05:1083:1100::/47
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1083:1500::/41
 IP-CIDR,2a05:1083:1580::/42
@@ -2237,7 +2237,6 @@ IP-CIDR,2a05:1083:15cf::/48
 IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
-IP-CIDR,2a06:a001:a0a0::/44
 IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
 IP-CIDR,2a09:b280:ff81::/48
@@ -2264,7 +2263,6 @@ IP-CIDR,2a0e:aa06:450::/44
 IP-CIDR,2a0e:aa06:490::/44
 IP-CIDR,2a0e:aa07:e01b::/48
 IP-CIDR,2a0e:aa07:e024::/47
-IP-CIDR,2a0e:aa07:e02e::/48
 IP-CIDR,2a0e:aa07:e200::/44
 IP-CIDR,2a0e:aa07:f000::/48
 IP-CIDR,2a0e:aa07:f004::/47
