--- a/ipv4.conf
+++ b/ipv4.conf
@@ -638,6 +638,7 @@ IP-CIDR,45.115.248.0/22
 IP-CIDR,45.116.16.0/22
 IP-CIDR,45.116.24.0/22
 IP-CIDR,45.116.32.0/21
+IP-CIDR,45.116.40.0/23
 IP-CIDR,45.116.52.0/22
 IP-CIDR,45.116.96.0/21
 IP-CIDR,45.116.140.0/22
@@ -847,6 +848,7 @@ IP-CIDR,47.89.64.0/24
 IP-CIDR,47.89.66.0/24
 IP-CIDR,47.89.91.0/24
 IP-CIDR,47.89.112.0/24
+IP-CIDR,47.89.121.0/24
 IP-CIDR,47.92.0.0/14
 IP-CIDR,47.96.0.0/11
 IP-CIDR,47.241.82.0/23
