--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2232,6 +2232,7 @@ IP-CIDR,2a05:1082:e000::/40
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1083:1500::/41
 IP-CIDR,2a05:1083:15c0::/47
+IP-CIDR,2a05:1083:15cf::/48
 IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
@@ -2261,6 +2262,7 @@ IP-CIDR,2a0e:aa06:450::/44
 IP-CIDR,2a0e:aa06:490::/44
 IP-CIDR,2a0e:aa07:e01b::/48
 IP-CIDR,2a0e:aa07:e024::/47
+IP-CIDR,2a0e:aa07:e02e::/48
 IP-CIDR,2a0e:aa07:e200::/44
 IP-CIDR,2a0e:aa07:f000::/48
 IP-CIDR,2a0e:aa07:f004::/47
