--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2249,9 +2249,11 @@ IP-CIDR,2a0c:b641:24f::/48
 IP-CIDR,2a0c:b641:571::/48
 IP-CIDR,2a0c:b641:572::/48
 IP-CIDR,2a0c:e640:6001::/48
-IP-CIDR,2a0c:e640:6002::/48
+IP-CIDR,2a0c:e640:6660::/47
 IP-CIDR,2a0c:e640:6780::/48
 IP-CIDR,2a0d:2584::/32
+IP-CIDR,2a0e:8f02:f006::/48
+IP-CIDR,2a0e:97c0:550::/44
 IP-CIDR,2a0e:97c0:5ee::/47
 IP-CIDR,2a0e:97c0:68e::/47
 IP-CIDR,2a0e:aa01:1fff::/48
@@ -2280,10 +2282,12 @@ IP-CIDR,2a0e:b107:e70::/44
 IP-CIDR,2a0e:b107:ea2::/48
 IP-CIDR,2a0e:b107:f08::/45
 IP-CIDR,2a0e:b107:11b0::/44
+IP-CIDR,2a0e:b107:12c0::/44
 IP-CIDR,2a0e:b107:1477::/48
 IP-CIDR,2a0e:b107:147a::/48
 IP-CIDR,2a0e:b107:147c::/48
 IP-CIDR,2a0e:b107:14a0::/44
+IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0e:b107:1787::/48
 IP-CIDR,2a0e:b107:17f0::/45
 IP-CIDR,2a0e:b107:17f8::/47
@@ -2293,6 +2297,7 @@ IP-CIDR,2a0f:9400:770a::/48
 IP-CIDR,2a10:2f00:12a::/48
 IP-CIDR,2a10:2f00:15a::/48
 IP-CIDR,2a10:2f00:15c::/48
+IP-CIDR,2a10:cc42:120::/44
 IP-CIDR,2a10:cc44:100::/44
 IP-CIDR,2c0f:f7a8:8011::/48
 IP-CIDR,2c0f:f7a8:8050::/48
