--- a/ipv6.conf
+++ b/ipv6.conf
@@ -770,6 +770,7 @@ IP-CIDR,2403:2680::/27
 IP-CIDR,2403:26c0::/27
 IP-CIDR,2403:2740::/27
 IP-CIDR,2403:2780::/27
+IP-CIDR,2403:27c0::/32
 IP-CIDR,2403:28c0::/27
 IP-CIDR,2403:2940::/27
 IP-CIDR,2403:2a00::/27
@@ -2235,10 +2236,14 @@ IP-CIDR,2a05:1083:15cf::/48
 IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
+IP-CIDR,2a06:a001:a030::/48
 IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
 IP-CIDR,2a09:b280:ff81::/48
-IP-CIDR,2a0a:2840::/30
+IP-CIDR,2a0a:2842:16::/48
+IP-CIDR,2a0a:2842:100::/48
+IP-CIDR,2a0a:2842:481::/48
+IP-CIDR,2a0a:2842:af00::/46
 IP-CIDR,2a0a:2846::/36
 IP-CIDR,2a0b:2542::/48
 IP-CIDR,2a0b:4340:530::/44
