Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -770,7 +770,6 @@ IP-CIDR,2403:2680::/27
 IP-CIDR,2403:26c0::/27
 IP-CIDR,2403:2740::/27
 IP-CIDR,2403:2780::/27
-IP-CIDR,2403:27c0::/32
 IP-CIDR,2403:28c0::/27
 IP-CIDR,2403:2940::/27
 IP-CIDR,2403:2a00::/27
@@ -2268,6 +2267,7 @@ IP-CIDR,2a0e:aa06:490::/44
 IP-CIDR,2a0e:aa07:e01b::/48
 IP-CIDR,2a0e:aa07:e024::/47
 IP-CIDR,2a0e:aa07:e02e::/48
+IP-CIDR,2a0e:aa07:e030::/48
 IP-CIDR,2a0e:aa07:e200::/44
 IP-CIDR,2a0e:aa07:f000::/48
 IP-CIDR,2a0e:aa07:f004::/47
