--- a/ipv4.conf
+++ b/ipv4.conf
@@ -3975,6 +3975,7 @@ IP-CIDR,156.247.16.0/20
 IP-CIDR,156.249.2.0/23
 IP-CIDR,156.252.22.0/24
 IP-CIDR,156.253.32.0/20
+IP-CIDR,156.254.32.0/21
 IP-CIDR,156.254.49.0/24
 IP-CIDR,156.254.62.0/23
 IP-CIDR,157.0.0.0/16
