--- a/ipv4.conf
+++ b/ipv4.conf
@@ -1009,6 +1009,7 @@ IP-CIDR,71.137.0.0/18
 IP-CIDR,79.133.176.0/23
 IP-CIDR,81.68.0.0/14
 IP-CIDR,81.173.16.0/21
+IP-CIDR,81.173.28.0/24
 IP-CIDR,82.156.0.0/15
 IP-CIDR,85.237.205.0/24
 IP-CIDR,87.254.207.0/24
