Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2114,6 +2114,7 @@ IP-CIDR,2408:8a00:c000::/36
 IP-CIDR,2408:8a00:d000::/37
 IP-CIDR,2408:8a00:e000::/35
 IP-CIDR,2408:8a01::/36
+IP-CIDR,2408:8a02:b120::/44
 IP-CIDR,2408:8a04:8000::/36
 IP-CIDR,2408:8a04:e000::/40
 IP-CIDR,2408:8a06::/47
@@ -2163,7 +2164,6 @@ IP-CIDR,240e:2000::/27
 IP-CIDR,240f:4000::/27
 IP-CIDR,240f:8000::/27
 IP-CIDR,240f:c000::/27
-IP-CIDR,2602:fc1d::/40
 IP-CIDR,2602:fd92:800::/47
 IP-CIDR,2602:fed2:731d::/48
 IP-CIDR,2602:feda:182::/47
