Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2230,6 +2230,7 @@ IP-CIDR,2a04:f580:9290::/48
 IP-CIDR,2a05:1082:e000::/40
 IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1083:1500::/41
+IP-CIDR,2a05:1083:1580::/42
 IP-CIDR,2a05:1083:15c0::/47
 IP-CIDR,2a05:1083:15cf::/48
 IP-CIDR,2a05:1084:7400::/40
@@ -2275,6 +2276,7 @@ IP-CIDR,2a0e:aa07:f0b0::/48
 IP-CIDR,2a0e:aa07:f0d0::/47
 IP-CIDR,2a0e:b107:16::/48
 IP-CIDR,2a0e:b107:1d0::/44
+IP-CIDR,2a0e:b107:272::/48
 IP-CIDR,2a0e:b107:580::/44
 IP-CIDR,2a0e:b107:6d0::/44
 IP-CIDR,2a0e:b107:bd0::/48
