--- a/ipv6.conf
+++ b/ipv6.conf
@@ -770,6 +770,8 @@ IP-CIDR,2403:2680::/27
 IP-CIDR,2403:26c0::/27
 IP-CIDR,2403:2740::/27
 IP-CIDR,2403:2780::/27
+IP-CIDR,2403:27c0:1000::/48
+IP-CIDR,2403:27c0:5000::/48
 IP-CIDR,2403:28c0::/27
 IP-CIDR,2403:2940::/27
 IP-CIDR,2403:2a00::/27
@@ -1070,6 +1072,7 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
+IP-CIDR,2404:2280:12e::/48
 IP-CIDR,2404:2280:147::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
@@ -2098,6 +2101,7 @@ IP-CIDR,2408:8924::/32
 IP-CIDR,2408:892c::/32
 IP-CIDR,2408:8936::/32
 IP-CIDR,2408:893a::/32
+IP-CIDR,2408:8940::/32
 IP-CIDR,2408:8948::/32
 IP-CIDR,2408:894c::/32
 IP-CIDR,2408:894e::/32
