--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1072,7 +1072,6 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
-IP-CIDR,2404:2280:12e::/48
 IP-CIDR,2404:2280:147::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
@@ -2118,8 +2117,12 @@ IP-CIDR,2408:8a00:c000::/36
 IP-CIDR,2408:8a00:d000::/37
 IP-CIDR,2408:8a00:e000::/35
 IP-CIDR,2408:8a01::/36
+IP-CIDR,2408:8a02:b110::/44
+IP-CIDR,2408:8a02:b120::/44
 IP-CIDR,2408:8a04:8000::/36
 IP-CIDR,2408:8a04:e000::/40
+IP-CIDR,2408:8a05:6000::/35
+IP-CIDR,2408:8a05:8000::/36
 IP-CIDR,2408:8a06::/47
 IP-CIDR,2408:8a06:100::/47
 IP-CIDR,2408:8a07:6000::/38
@@ -2241,6 +2244,7 @@ IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
 IP-CIDR,2a06:a001:a030::/48
+IP-CIDR,2a06:a001:a051::/48
 IP-CIDR,2a07:59c1:30a0::/43
 IP-CIDR,2a07:59c1:30c0::/43
 IP-CIDR,2a09:b280:ff81::/48
