Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2239,7 +2239,8 @@ IP-CIDR,2a05:1083:1103::/48
 IP-CIDR,2a05:1083:1500::/41
 IP-CIDR,2a05:1083:1580::/42
 IP-CIDR,2a05:1083:15c0::/47
-IP-CIDR,2a05:1083:15cf::/48
+IP-CIDR,2a05:1083:15cd::/48
+IP-CIDR,2a05:1083:15ce::/47
 IP-CIDR,2a05:1084:7400::/40
 IP-CIDR,2a05:1084:9000::/36
 IP-CIDR,2a05:1086::/31
