--- a/ipv4.conf
+++ b/ipv4.conf
@@ -3917,6 +3917,7 @@ IP-CIDR,153.101.0.0/16
 IP-CIDR,153.118.0.0/15
 IP-CIDR,154.8.128.0/17
 IP-CIDR,154.18.162.0/24
+IP-CIDR,154.48.252.0/24
 IP-CIDR,154.72.40.0/21
 IP-CIDR,154.83.28.0/24
 IP-CIDR,154.85.14.0/23
