--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2144,6 +2144,13 @@ IP-CIDR,2409:8000::/20
 IP-CIDR,240a:2000::/27
 IP-CIDR,240a:4000::/27
 IP-CIDR,240a:4082:c000::/35
+IP-CIDR,240a:408a:c000::/35
+IP-CIDR,240a:4092:c000::/35
+IP-CIDR,240a:409a:c000::/35
+IP-CIDR,240a:40a2:c000::/35
+IP-CIDR,240a:40aa:c000::/35
+IP-CIDR,240a:414c::/31
+IP-CIDR,240a:41cc::/31
 IP-CIDR,240a:6000::/27
 IP-CIDR,240a:8000::/27
 IP-CIDR,240a:a000::/20
