Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1072,6 +1072,7 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
+IP-CIDR,2404:2280:12e::/48
 IP-CIDR,2404:2280:147::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
@@ -1524,6 +1525,7 @@ IP-CIDR,2406:42c0::/27
 IP-CIDR,2406:4340::/27
 IP-CIDR,2406:4380::/27
 IP-CIDR,2406:43c0::/27
+IP-CIDR,2406:4440:f001::/48
 IP-CIDR,2406:4480::/27
 IP-CIDR,2406:4500::/27
 IP-CIDR,2406:4680::/27
