Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1525,7 +1525,6 @@ IP-CIDR,2406:4440:f001::/48
 IP-CIDR,2406:4480::/27
 IP-CIDR,2406:4500::/27
 IP-CIDR,2406:4680::/27
-IP-CIDR,2406:4980::/27
 IP-CIDR,2406:4b80::/27
 IP-CIDR,2406:4c80::/27
 IP-CIDR,2406:4d00::/27
@@ -2269,6 +2268,8 @@ IP-CIDR,2a0c:e640:6001::/48
 IP-CIDR,2a0c:e640:6660::/47
 IP-CIDR,2a0c:e640:6780::/48
 IP-CIDR,2a0d:2584::/32
+IP-CIDR,2a0d:2587::/33
+IP-CIDR,2a0d:2587:c200::/48
 IP-CIDR,2a0e:8f02:f006::/48
 IP-CIDR,2a0e:97c0:550::/44
 IP-CIDR,2a0e:97c0:5ee::/47
