Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -769,6 +769,7 @@ IP-CIDR,2403:2680::/27
 IP-CIDR,2403:26c0::/27
 IP-CIDR,2403:2740::/27
 IP-CIDR,2403:2780::/27
+IP-CIDR,2403:27c0:c03::/48
 IP-CIDR,2403:27c0:1000::/48
 IP-CIDR,2403:27c0:5000::/48
 IP-CIDR,2403:28c0::/27
@@ -1521,7 +1522,6 @@ IP-CIDR,2406:42c0::/27
 IP-CIDR,2406:4340::/27
 IP-CIDR,2406:4380::/27
 IP-CIDR,2406:43c0::/27
-IP-CIDR,2406:4440:f001::/48
 IP-CIDR,2406:4480::/27
 IP-CIDR,2406:4500::/27
 IP-CIDR,2406:4680::/27
