Update CIDR list

--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1522,6 +1522,7 @@ IP-CIDR,2406:42c0::/27
 IP-CIDR,2406:4340::/27
 IP-CIDR,2406:4380::/27
 IP-CIDR,2406:43c0::/27
+IP-CIDR,2406:4440:f001::/48
 IP-CIDR,2406:4480::/27
 IP-CIDR,2406:4500::/27
 IP-CIDR,2406:4680::/27
@@ -2184,6 +2185,7 @@ IP-CIDR,2602:feda:1d1::/48
 IP-CIDR,2602:feda:1d2::/48
 IP-CIDR,2602:feda:2d0::/47
 IP-CIDR,2602:feda:2f0::/48
+IP-CIDR,2602:feda:ae6::/47
 IP-CIDR,2602:feda:af3::/48
 IP-CIDR,2602:feda:bf0::/44
 IP-CIDR,2602:feda:d30::/44
