--- a/ipv4.conf
+++ b/ipv4.conf
@@ -258,6 +258,7 @@ IP-CIDR,42.248.0.0/13
 IP-CIDR,43.128.0.0/15
 IP-CIDR,43.130.0.0/16
 IP-CIDR,43.131.0.0/17
+IP-CIDR,43.131.128.0/19
 IP-CIDR,43.131.192.0/18
 IP-CIDR,43.132.0.0/18
 IP-CIDR,43.132.68.0/24
