--- a/ipv6.yaml
+++ b/ipv6.yaml
@@ -1523,6 +1523,7 @@ payload:
   - '2406:4340::/27'
   - '2406:4380::/27'
   - '2406:43c0::/27'
+  - '2406:4440:f001::/48'
   - '2406:4480::/27'
   - '2406:4500::/27'
   - '2406:4680::/27'
@@ -2185,6 +2186,7 @@ payload:
   - '2602:feda:1d2::/48'
   - '2602:feda:2d0::/47'
   - '2602:feda:2f0::/48'
+  - '2602:feda:ae6::/47'
   - '2602:feda:af3::/48'
   - '2602:feda:bf0::/44'
   - '2602:feda:d30::/44'
