--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2294,12 +2294,14 @@ IP-CIDR,2a0e:b107:16::/48
 IP-CIDR,2a0e:b107:1d0::/44
 IP-CIDR,2a0e:b107:272::/48
 IP-CIDR,2a0e:b107:580::/44
+IP-CIDR,2a0e:b107:6d0::/44
 IP-CIDR,2a0e:b107:bd0::/48
 IP-CIDR,2a0e:b107:c10::/48
 IP-CIDR,2a0e:b107:c30::/44
 IP-CIDR,2a0e:b107:da0::/44
 IP-CIDR,2a0e:b107:dce::/48
 IP-CIDR,2a0e:b107:e70::/44
+IP-CIDR,2a0e:b107:ea2::/48
 IP-CIDR,2a0e:b107:f08::/45
 IP-CIDR,2a0e:b107:11b0::/44
 IP-CIDR,2a0e:b107:12c0::/44
