Update CIDR list

--- a/ipv4.conf
+++ b/ipv4.conf
@@ -3850,6 +3850,7 @@ IP-CIDR,145.14.86.0/24
 IP-CIDR,145.14.88.0/24
 IP-CIDR,145.14.90.0/24
 IP-CIDR,145.14.92.0/24
+IP-CIDR,146.19.236.0/24
 IP-CIDR,146.56.192.0/18
 IP-CIDR,146.196.56.0/22
 IP-CIDR,146.196.68.0/22
