--- a/ipv6.conf
+++ b/ipv6.conf
@@ -1071,6 +1071,7 @@ IP-CIDR,2404:2280:106::/47
 IP-CIDR,2404:2280:10d::/48
 IP-CIDR,2404:2280:113::/48
 IP-CIDR,2404:2280:124::/47
+IP-CIDR,2404:2280:12e::/48
 IP-CIDR,2404:2280:147::/48
 IP-CIDR,2404:2280:19d::/48
 IP-CIDR,2404:2280:1be::/48
@@ -2186,7 +2187,6 @@ IP-CIDR,2602:feda:1d1::/48
 IP-CIDR,2602:feda:1d2::/48
 IP-CIDR,2602:feda:2d0::/47
 IP-CIDR,2602:feda:2f0::/48
-IP-CIDR,2602:feda:ae6::/47
 IP-CIDR,2602:feda:af3::/48
 IP-CIDR,2602:feda:bf0::/44
 IP-CIDR,2602:feda:d30::/44
