--- a/ipv6.conf
+++ b/ipv6.conf
@@ -2288,7 +2288,7 @@ IP-CIDR,2a0e:aa07:e02e::/48
 IP-CIDR,2a0e:aa07:e030::/48
 IP-CIDR,2a0e:aa07:e200::/44
 IP-CIDR,2a0e:aa07:f000::/48
-IP-CIDR,2a0e:aa07:f004::/47
+IP-CIDR,2a0e:aa07:f004::/48
 IP-CIDR,2a0e:aa07:f0b0::/48
 IP-CIDR,2a0e:aa07:f0d0::/47
 IP-CIDR,2a0e:b107:16::/48
@@ -2314,6 +2314,7 @@ IP-CIDR,2a0e:b107:16b0::/44
 IP-CIDR,2a0e:b107:1787::/48
 IP-CIDR,2a0e:b107:17f0::/45
 IP-CIDR,2a0e:b107:17f8::/47
+IP-CIDR,2a0e:b107:17fe::/47
 IP-CIDR,2a0f:5707:ac01::/48
 IP-CIDR,2a0f:7980::/44
 IP-CIDR,2a0f:9400:770a::/48
